# after-effects-mcp-rs

./: .gitignore  AGENTS.md  Cargo.toml  README-ja.md  README.md
.github/workflows/: installer-build.yml  rc-release.yml  release-on-main.yml
crates/ae-mcp/: Cargo.toml
crates/ae-mcp/src/: daemon.rs  main.rs  mcp_stdio.rs
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: lib.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: lib.rs
crates/platform-service/: Cargo.toml
crates/platform-service/src/: lib.rs
crates/pr-core/: Cargo.toml
crates/pr-core/src/: lib.rs
crates/pr-mcp/: Cargo.toml
crates/pr-mcp/src/: main.rs  mcp_stdio.rs
docs/: development-stages.md  installer-e2e.md  mcp-jsx-tool-restructure.md  migration-guide-ts-to-rust.md  operations-runbook.md  release-checklist.md  setup-codex-mcp.md  signing-and-rc.md  specification-rust-migration.md
scripts/: install-bridge-installer.ps1  install-bridge.ps1  install-bridge.sh  notarize-macos.sh  package-macos.sh  package-windows.ps1  sign-windows.ps1
src/: index.ts
src/premiere/cep/mcp-bridge-premiere/: index.html
src/premiere/cep/mcp-bridge-premiere/CSXS/: manifest.xml
src/premiere/cep/mcp-bridge-premiere/css/: styles.css
src/premiere/cep/mcp-bridge-premiere/js/: main.js
src/premiere/cep/mcp-bridge-premiere/jsx/: bridge.jsx
src/premiere/uxp/mcp-bridge-premiere/js/: main.js
src/scripts/: applyEffect.jsx  applyEffectTemplate.jsx  createShapeLayer.jsx  createSolidLayer.jsx  createTextLayer.jsx  describeEffect.jsx  getLayerInfo.jsx  listSupportedEffects.jsx  mcp-bridge-auto.jsx
