[workspace]
members = [
    "crates/ae-mcp",
    "crates/bridge-core",
    "crates/mcp-core",
    "crates/platform-service",
    "crates/pr-core",
    "crates/pr-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["after-effects-mcp-rs contributors"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = true }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time", "io-util", "io-std"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
