[package]
name = "pr-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
mcp-core = { path = "../mcp-core" }
bridge-core = { path = "../bridge-core" }
platform-service = { path = "../platform-service" }
pr-core = { path = "../pr-core" }
